@@ -15,6 +15,7 @@ import zope.component
 import zeit.cms.interfaces
 
 import zeit.web.core.interfaces
+import zeit.web.core.metrics
 import zeit.web.core.template
 
 
@@ -152,7 +153,9 @@ def request_thread(path):
     uri = '{}/agatho/thread{}'.format(
         conf.get('agatho_host', ''), path.encode('utf-8'))
     try:
-        response = requests.get(uri, timeout=timeout)
+        with zeit.web.core.metrics.timer(
+                'request_thread.community.reponse_time'):
+            response = requests.get(uri, timeout=timeout)
         if response.status_code == 404:
             return
         return response.content if (200 <= response.status_code < 300) else (
@@ -360,8 +363,10 @@ def request_counts(*unique_ids):
     uri = '{}/agatho/node-comment-statistics'.format(
         conf.get('community_host', '').rstrip('/'))
     try:
-        response = requests.post(uri, data=[('unique_ids[]', uid) for uid in
-                                            unique_ids], timeout=timeout)
+        with zeit.web.core.metrics.timer(
+                'request_counts.community.reponse_time'):
+            response = requests.post(uri, data=[
+                ('unique_ids[]', uid) for uid in unique_ids], timeout=timeout)
         return response.ok and response.content or None
     except (AttributeError, requests.exceptions.RequestException):
         return
